hphp/hack/test/typecheck/expression_trees/nesting/missing_name.php.exp
ERROR: File "missing_name.php", line 6, characters 8-10:
Expression trees must provide the DSL name. (Parsing[1002])
ERROR: File "missing_name.php", line 7, characters 29-31:
Expression trees must provide the DSL name. (Parsing[1002])
ERROR: File "missing_name.php", line 6, characters 8-8:
Unbound name: `MISSING_DSL` (Naming[2049])
ERROR: File "missing_name.php", line 6, characters 8-8:
Unbound name: `MISSING_DSL` (an object type) (Naming[2049])
ERROR: File "missing_name.php", line 6, characters 9-9:
Unbound name: `MISSING_DSL` (an object type) (Naming[2049])
